# ChangeLog for app-misc/golly
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/golly/ChangeLog,v 1.18 2013/05/15 07:09:23 xmw Exp $

*golly-2.4-r1 (15 May 2013)

  15 May 2013; Michael Weber <xmw@gentoo.org> +golly-2.4-r1.ebuild:
  Add icon (thanks Samuel BAUER, bug 469608), python-single-r1 eclass.

  26 Dec 2012; Jeff Horelick <jdhore@gentoo.org> golly-2.4.ebuild:
  marked x86 per bug 447700

  19 Dec 2012; Agostino Sarubbo <ago@gentoo.org> golly-2.4.ebuild:
  Stable for amd64, wrt bug #447700

*golly-2.4 (18 Jun 2012)

  18 Jun 2012; Michael Weber <xmw@gentoo.org> -golly-2.2.ebuild,
  -golly-2.2-r1.ebuild, -files/golly-2.2-perl-5.14.patch, -golly-2.3.ebuild,
  golly-2.3-r1.ebuild, +golly-2.4.ebuild:
  Version bump (thanks Maks Verver, bug 421485), drop old, remove eutils
  eclass.

  08 Jun 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> golly-2.3-r1.ebuild:
  x86 stable wrt bug #418605

  01 Jun 2012; Agostino Sarubbo <ago@gentoo.org> golly-2.3-r1.ebuild:
  Stable for amd64, wrt bug #418605

  24 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> golly-2.3.ebuild:
  x86 stable wrt bug #403411

*golly-2.3-r1 (14 Feb 2012)

  14 Feb 2012; Michael Weber <xmw@gentoo.org> golly-2.3.ebuild,
  +golly-2.3-r1.ebuild:
  Adding sys-libs/zlib dependency and revbump to fix CXXFLAGS, thanks Agostino
  Sarubbo (bug 403573)

  14 Feb 2012; Agostino Sarubbo <ago@gentoo.org> golly-2.3.ebuild:
  Stable for amd64, wrt bug #403411

*golly-2.3 (27 Dec 2011)

  27 Dec 2011; Michael Weber <xmw@gentoo.org> +golly-2.3.ebuild,
  -files/golly-separate-data-directory.patch:
  Version bump (thanks Maks Verver, bug 395757)

*golly-2.2-r1 (27 Sep 2011)

  27 Sep 2011; Michael Weber <xmw@gentoo.org> -golly-2.1.ebuild,
  -golly-2.1-r1.ebuild, -files/golly-2.1-as-needed.patch,
  -files/golly-2.1-perl-ldopts.patch, -files/golly-2.1-python-amd64.patch,
  golly-2.2.ebuild, +golly-2.2-r1.ebuild, +files/golly-2.2-perl-5.14.patch: