@@ -1,17 +1,17 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST golly-2.3-src.tar.gz 2613073 SHA256 a1bfa412cd008e7286bc3d50decac65583720676b596bfbf5333306273a6218b SHA512 7b8c2b064d666da44f1f7c57bf074d08fc741467292abb4e9f64f19430c327ea6639a474d355a7dee1f4ce6efe4dab16574109b12e29f9f267b14f6d3fab06c8 WHIRLPOOL c185a763b3a749b6ef9c42fee8692b606359963d7ee16d6466afa30243f0fde4c1412008f785c0412ba7cd13d3fcd6c7833bdad82e6c75a35d31988455711f4b
 DIST golly-2.4-src.tar.gz 2612440 SHA256 b5e4fe5dfb9f6b6a514211b31498be886012638e8aaae16a08b50bf2f6d676c4 SHA512 7e49d72ff638c21f7bdf9de6d254e6baa4989735bdc3d9c52ec9eeacce7e9c6261d32f86b9c62478c3192d17aaba0f30994ad8e9be625dfa21de4d2b035493f9 WHIRLPOOL 556b4a319091f34362c66452b898c281620d0c98b71fbe9491a32e08edafea988d850287178d74cb2b2c34e12954f4fdb4477effa80e8f54aa938930383efe01
-EBUILD golly-2.3-r1.ebuild 969 SHA256 e9cc6f750872230f7d17a15a475cde793b4a975961eca811bbcf76a6062d011b SHA512 96662f1f496eab5669f4ad7a59f50c5a882c542b722b019f939b7de460100e476cd187ac52dfd01fb33d82417037483ee253c60adeec8d81d0a4952e1c47284b WHIRLPOOL c9cabc5d168f3ce62d7f4ca0da8cefa4d906a33d76cea54ebafbc1759bad572a439e67bb2c2b9c54c12f3cbaed3c632b5bc9c5868cccaa1ae9162f969b0ae0af
-EBUILD golly-2.4-r1.ebuild 907 SHA256 363e2167f241e352407e9abf3376a46b674f58c774dcaa85a65114aa7bf5c148 SHA512 4f5cab1cfcd9f9d7d9ee24c157d09b4e27d67124f9a011d7d7cf593a997c6f0953df571c00475a180f11c1631309813861cf0c632b67bcf919c8d450c517d514 WHIRLPOOL b616b935a0e85412e050635b4c393212b325b76f4d482d78b03c0aed2a08bb322ee17944b409610209d02fe00cd8d2694da0e0af374323c5a534b9152a51d5ba
+DIST golly-2.5-src.tar.gz 3381010 SHA256 b741c0b33fccdc72cd602fb5fcab099c4611d1a92d6bdd89b24d7410c28bbeac SHA512 832d839151ecba4302444cc9a4b22c490220c433941ed806d9a0df07c7d0ea230d89ea1fbe120e8f7d9659a850916379e722c9a1765bcf22bb74964f94d8cf27 WHIRLPOOL 1cbabcbabe14a9dd2991fb30c6fec1e8b6cdb61f7eede3e5ed9041d74b35718804e4394be0a8bb04204eb617f28db4e26f0af50dc48d8e5cf312860941b687f5
+EBUILD golly-2.4-r1.ebuild 960 SHA256 f40c3d5294ef101b53fdacbbd96d342bd359a4ee33c8ef849c3a99b5a9f0e410 SHA512 927c8e7164f2e74e58e78a4b739f8cc1ccd1aa05e80526489e704a51237e02d7723e6efa0af4dac14400124b0b26365770de4c6720c18e0406bd9cf8dcfe2d19 WHIRLPOOL 7d9f62ed48f5c3e994a6328b72afb2c3713d20c6b9a5cf8c82352e7e98e2f56977e9186405e3cec651bb1c4826d6a138cb5bf0a11162fe945b602092f85abc78
 EBUILD golly-2.4.ebuild 974 SHA256 df0592b0d7f01aa1c20617cdbac0fbdad51a3ff78f603a45239d4627f7caf3e4 SHA512 285cfef046f79da9b18d047cf536b58d5c29f97cf3089a0b6c90dbf1f6204aa532fe7c252e280b94344b08785aff27d3298a1e605e43060dbc8e756fb60d4f1c WHIRLPOOL 2d7ba177a447213f82a890abd783d31822429b0910f56a291cdb90c61b17ba0f807583f44a1347ee5668d713e3177226c1964f92230e00b6fdafef7d8b55c475
-MISC ChangeLog 3289 SHA256 63bd513c1ac396ecfc8e2802cc9baa83843f0e3390003c4cf8581a7e521c4a80 SHA512 75d31c5af50c5d5ff008fb2b20855a6a391b0418acc00942d2a7505670581a837bbaeb7a3ce04e05dd598cf6007151c5b5d25522aea21109c6b7c4d58b9c7d70 WHIRLPOOL d6a20f7817cf294a8227b15e76aa56347dc129c010ca064e931cfd57228f3758b858db1661ada3a52fba22b99b13972e000ec1bc8d4fb52cdb284af96e6c54c2
+EBUILD golly-2.5.ebuild 1077 SHA256 6536cc3b9805c286caed67d863b7c0631e5856087f4a6c15ae0b6b04375e4195 SHA512 9d09c8ed85b689cc92f2a3fca21426bbd0385aeca786ce2653847ef8c00dff1d850d9a02b24f04d0d5074f001372fec011796d34081c38922c6a965365f01eea WHIRLPOOL 5a948ed9bb8b9e8c85e53eaed524dc1f81bf9f00ef20113f5a35f27d6a153a9ee2644798c7c4ed69d9f8088af386b7b74a4169289bf239eb529eac665eb764cd
+MISC ChangeLog 3505 SHA256 510f2d8b67c116342b13dcb40c06cae1d9620a6c8a0bcf4919b006875b9c2fdd SHA512 c38435e49c4a03d25687a2775889fbedc3ffec97f075d5480f25c50717382559d69236b6a8a4a578a7db7837cea9f7dd65cf5f755d4dd12b023a83a20e4474bc WHIRLPOOL 11410fac3f46c785cedfddd696a3df2649f186869253034c7109ef153cfb7e4f5d1b004d98bcdd485b5c45799fbdcfc6bfa890603bbd11bd622a7130d9ad41b0
 MISC metadata.xml 224 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7 SHA512 4f78d959809ec0db2f9be2a7747d572fa8ee03d177044dd46574881a6ee83736510b76062c12daecae609282d197ba466e8a3e3a654b1383e04c659acd41bef5 WHIRLPOOL 0300a228d371c918b051bc24859dfe4e5d0d2a71b80f697f202749c5aca69efcee4be6e69454c9abfa4ced28e19a9d1f71d6d7eaf54290b8d03b5c04fd209868
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlGTNTwACgkQknrdDGLu8JBt5gD/WpG5QmLwQ/FuOL8KB3N4c63R
-31TqcuahJOzb35Wqp1cA/2DOUHwsYGIqQBv93EVV88efcZQ+Wp4gYX8yB2VU2S9N
-=bagR
+iF4EAREIAAYFAlHEeZUACgkQknrdDGLu8JCwbAD+KercJEd8CXPvNcuvq6S+6ARp
+5+f/KMAWwKzz71xFFFoA/RXLHVp7hHmJdo0oLVKQOC89NyTGgjI4zUgoAY7RPFOe
+=N1qv
 -----END PGP SIGNATURE-----
