@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/golly
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/golly/ChangeLog,v 1.18 2013/05/15 07:09:23 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/golly/ChangeLog,v 1.19 2013/06/21 16:04:03 xmw Exp $
+
+*golly-2.5 (21 Jun 2013)
+
+  21 Jun 2013; Michael Weber <xmw@gentoo.org> +golly-2.5.ebuild,
+  -golly-2.3-r1.ebuild, golly-2.4-r1.ebuild:
+  Version bump by Maks Verver (bug 473968), respect AR (bug 447748), drop old.
 
 *golly-2.4-r1 (15 May 2013)
 
